--- a/GrownOver.Application/GrownOver.Application.csproj
+++ b/GrownOver.Application/GrownOver.Application.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="6.0.11" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.12" />
   </ItemGroup>
 
   <ItemGroup>
